--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
+        "owen-it/laravel-auditing": "^13.0",
         "symfony/polyfill-iconv": "^1.26"
     },
     "require-dev": {
